abstract, fixed structure of the thesis section

--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -76,8 +76,11 @@ In this work we study computational complexity of problems related to elections.
 We are interested in problems of detecting whether
 some subsets of candidates are either indistinguishable or hardly distinguishable for voters.
 We call such candidates clones and imperfect clones, respectively.
-We conclude that detecting clones is in \textsc{P}
-and detecting imperfect clones is \textsc{NP}-complete for some measures.
+We conclude that detecting clones is in \textsc{P}.
+For imperfect clones we discuss measures of the distance from some clone.
+We define optimal decloning as the problem of finding imperfect clones
+with minimal sum of the distances.
+We show that optimal decloning is \textsc{NP}-complete for some measures.
 }
 
 \tableofcontents
