--- a/introduction.tex
+++ b/introduction.tex
@@ -12,7 +12,7 @@ When it comes to the election, confused supporters of $A$ do not know who they s
 Their votes end up split between $A$ and $C$.
 Candidate $B$ wins the elections and becomes the president.
 
-This is a particular case of an attack known as \textit{strategic candidacy} or \textit{control by adding candidates},
+This is a particular case of an attack known as \textit{strategic candidacy} or \textit{control by adding candidates}, %TODO: citation
 depending on the person performing the attack.
 We are interested in the variant where the new candidates are very similar to some of the existing ones.
 So similar, that they are indistinguishable or hardly distinguishable for voters.
@@ -30,10 +30,10 @@ Given voters preferences, regardless of the election system used, we want to det
 This thesis has the following structure.
 In Chapter 2 we briefly present concepts from computer science
 and mathematics that form the basis of our arguments.
-In Chapter we include formal definitions of elections, introduces the decloning problem
-and shows a polynomial-time algorithm for it.
+In Chapter 3 we include formal definitions of elections, introduce the decloning problem
+and show a polynomial-time algorithm for it.
 Chapter 4 contains study of imperfect clone structures.
-It discusses error functions for clone set families and the optimal non-perfect decloning problem.
+It discusses error functions for clone set families and the optimal non-perfect decloning problems.
 For a sample error function we prove that optimal decloning is \np-complete.
 Finally, Chapter 5 summarizes our results, discusses real-life consequences,
 and indicates opportunities for further research.
