extended intro and bib item

--- a/bib.bib
+++ b/bib.bib
@@ -35,6 +35,12 @@
     year    = "1993",
 }
 
+@book{computersandintractability,
+    author = "Michael Garey and David Johnson",
+    title = "Computers and Intractability, A Guide to the Theory of NP-Completeness",
+    publisher = "W. H. Freeman and Company",
+    year = "1979",
+}
 
 @book{graphtheory,
     author  = "Robin Wilson",
