--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,7 @@
 Elections is a situation when a set of voters collaboratively chooses one or many winners from multiple candidates.
-%Group decision making / opinion aggregation is crucial in contemporary societes.
+It is an established way of aggregating opinions into a single global decision.
+Group decision making is crucial in contemporary societies.
+It may be used also to reach consensus in distributed computer systems.
 
 \section{Attacking Elections with Clones}
 
