more election system examples, voting systems references, fixed typos

--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,15 @@
+@article{rangevoting,
+	author = "Warren Smith",
+	title = "Range voting",
+	year = "2000",
+}
+
+@article{fallbackvoting,
+	author = "Steven Brams and Remzi Sanver",
+	title = "Voting Systems That Combine Approval and Preference",
+	year = "2006",
+}
+
 @article{clonestructures,
     author  = "Edith Elkind and Piotr Faliszewski and Arkadii Slinko",
     title   = "Clone Structures in Voters' Preferences",
