--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -270,6 +270,7 @@ Now we will introduce some such problems.
 \textsc{X3C} is $NP$-complete.
 \end{thm}
 
+Its proof can be found in \cite{computersandintractability}.
 
 \begin{problem}{Clique}
     Input: Graph $G = (V, E)$, integer $c$.
@@ -280,6 +281,8 @@ Now we will introduce some such problems.
 \begin{thm}
 \textsc{Clique} is $NP$-complete.
 \end{thm}
+
+Again, its proof in included in \cite{computersandintractability}.
 
 
 We will show an example of an $NP$-completeness proof using the method of reduction.
