--- a/summary.tex
+++ b/summary.tex
@@ -1,6 +1,6 @@
 \section{Results}
 
-In this work we have defined decloning, which is a parition of candidates into clone sets.
+In this work we have defined decloning, which is a partition of candidates into clone sets.
 We defined \textsc{Decloning} problem of finding for a preference profile a decloning of given cardinality.
 We have shown that \textsc{Decloning} problem is in \p.
 This means that if all voters perfectly detect clones
