--- a/bib.bib
+++ b/bib.bib
@@ -1,13 +1,36 @@
-@article{rangevoting,
-	author = "Warren Smith",
-	title = "Range voting",
-	year = "2000",
+@book{handbook,
+	author  = "Kenneth Arrow and Amartya Sen and  Kotaro Suzumura",
+	title   = "Handbook of Social Choice and Welfare",
+	publisher = "Elsevier",
+	year    = "2002",
 }
 
-@article{fallbackvoting,
-	author = "Steven Brams and Remzi Sanver",
-	title = "Voting Systems That Combine Approval and Preference",
-	year = "2006",
+@article{clones1,
+    author  = "Gilbert Laffond and Jean Laine and Jean-Francois Laslier",
+    title   = "Composition-consistent tournament solutions and social choice functions",
+    year    = "1996",
+    journal = "Social Choice and Welfare",
+}
+
+@article{clones2,
+   author   = "Jean-Francois Laslier",
+   title    = "Rank-based choice correspondencies",
+   year     = "1996",
+   journal  = "Economics Letters",
+}
+
+@article{clones3,
+   author  = "Jean-Francois Laslier",
+   title   = "Aggregation of preferences with a variable set of alternatives",
+   year    = "2000",
+   journal = "Social Choice and Welfare",
+}
+
+@article{independenceofclones,
+   author  = "Nicolaus Tideman",
+   title   = "Independence of clones as a criterion for voting rules",
+   year    = "1987",
+   journal = "Social Choice and Welfare",
 }
 
 @article{clonestructures,
@@ -24,7 +47,6 @@
     volume  = "42",
 }
 
-
 @article{usingcomplexity,
     author  = "Piotr Faliszewski and Edith Hemaspaandra and Lane Hemaspaandra",
     title   = "Using Complexity to Protect Elections",
@@ -33,10 +55,44 @@
     volume  = "53",
 }
 
+@article{usingcomp1,
+    author  = "John Bartholdi and James Orlin",
+    title   = "Single transferable vote resists strategic voting",
+    year    = "1991",
+    journal = "Social Choice and Welfare",
+}
+
+@article{usingcomp2,
+   author   = "John Bartholdi and Craig Tovey and Michael Trick",
+   title    = "The computational difficulty of manipulating an election",
+   year     = "1989",
+   journal  = "Social Choice and Welfare",
+}
+
+@article{usingcomp3,
+   author   = "John Bartholdi and Craig Tovey and Michael Trick",
+   title    = "How hard is it to control an election?",
+   year     = "1992",
+   journal  = "Mathematical and Computer Modeling",
+}
+
+
 @article{compsocialchoice,
     author  = "Felix Brandt and Vincent Conitzer and Ulle Endriss",
     title   = "Computational Social Choice",
     year    = "2012",
+}
+
+@article{rangevoting,
+	author  = "Warren Smith",
+	title   = "Range voting",
+	year    = "2000",
+}
+
+@article{fallbackvoting,
+	author  = "Steven Brams and Remzi Sanver",
+	title   = "Voting Systems That Combine Approval and Preference",
+	year    = "2006",
 }
 
 
