--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -92,7 +92,7 @@ We show that optimal decloning is \textsc{NP}-complete for some measures.
 \chapter{Summary} \input{"summary.tex"}
 
 
-\nocite{*}
+%\nocite{*}
 \bibliographystyle{plain}
 \bibliography{bib}
 
