--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -5,6 +5,7 @@
 \usepackage[T1]{fontenc}
 %\usepackage[latin2]{inputenc} 
 \usepackage{fullpage}
+\usepackage{setspace}
 \linespread{1.3}
 
 % generate index
@@ -68,7 +69,28 @@
 
 \begin{document}
 
-\maketitle
+\begin{titlepage}
+\begin{center}
+\begin{spacing}{2}
+\textsc{\huge The Computational Complexity\\of~Detecting Clones in Elections}\\[3cm]
+\end{spacing}
+
+{\Large Master's Thesis}\\
+{\large at}\\
+{\Large Faculty of Computer Science,\\Electronics and Telecommunications}\\
+{\Large AGH University of Science and Technology}\\[1.5cm]
+
+{\large of}\\
+{\Large Szymon Gut}\\[1.5cm]
+
+{\large supervised by}\\
+{\Large dr hab. inż. Piotr Faliszewski}
+
+
+\end{center}
+\end{titlepage}
+
+%\maketitle
 
 
 \abstract{
