--- a/decloning.tex
+++ b/decloning.tex
@@ -73,7 +73,7 @@ the sequence from the preference order of the $i$-th voter for $i=1,...,n$ (e.g.
 \end{problem}
 
 \begin{thm}
-\textsc{Decloning} is in $P$.
+\textsc{Decloning} is in \p.
 \end{thm}
 
 \begin{proof}
