--- a/elections.tex
+++ b/elections.tex
@@ -4,13 +4,13 @@ This model is general enough to describe special cases
 when we care only for some first or last candidates for every voter.
 It assumes the ability of each voter to arrange all candidates according to his preferences.
 On the other hand, it fails to express the situation when a voter perceives that some differences
-between his consecutive candidates are bigger than others, e.g. statement such as:
+between his consecutive candidates are bigger than others, e.g., statements such as:
 \textit{candidates A and B are fine, with A slightly better than B, but C and D are absolutely not acceptable}.
 Range voting \cite{rangevoting} or fallback voting \cite{fallbackvoting} systems
-allow for more elastic expressing of opinions.
+allow for more elastic expression of opinions.
 
 \begin{defn}[preference order]
-Given a finite candidate set $C$ a preference order over $C$
+Given a finite candidate set $C$, a preference order over $C$
 is~a~total order over $C$.
 \end{defn}
 
@@ -44,13 +44,13 @@ that maps election to non-empty set of winners.
 \end{defn}
 
 \begin{exmp}[Plurality]
-Plurality is an election system that for given election chooses winners as candidates
-with the most number of voters who ranked them on the first position.
+Plurality is an election system that for given election chooses winners as the candidates
+with the highest number of voters who ranked them on the first position.
 \end{exmp}
 
 \begin{exmp}[Borda]
 Borda is an elections system in which each voter gives its $i$-th candidate score $i$.
-Winners are candidates with lowest score.
+Winners are candidates with lowest scores.
 \end{exmp}
 
 \begin{exmp}[Copeland]
