--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -71,23 +71,39 @@
 
 \begin{titlepage}
 \begin{center}
+{\Large AGH University of Science and Technology}\\[0.2cm]
+{\Large Faculty of Computer Science,\\Electronics and Telecommunications}\\[0.25cm]
+{\Large Department of Computer Science}\\[1.5cm]
+
+{\Large Master's Thesis}\\[1.0cm]
+
 \begin{spacing}{2}
 \textsc{\huge The Computational Complexity\\of~Detecting Clones in Elections}\\[3cm]
 \end{spacing}
 
-{\Large Master's Thesis}\\
-{\large at}\\
-{\Large Faculty of Computer Science,\\Electronics and Telecommunications}\\
-{\Large AGH University of Science and Technology}\\[1.5cm]
-
-{\large of}\\
-{\Large Szymon Gut}\\[1.5cm]
-
-{\large supervised by}\\
-{\Large dr hab. inż. Piotr Faliszewski}
-
-
 \end{center}
+
+\vfill
+\begin{flushleft}
+\begin{tabular}{p{45mm}l}
+\large Author: & {\large \itshape Szymon Gut}\\[-1mm]
+\large Degree programme: & {\large \itshape Computer Science}\\[-1mm]
+\large Supervisor: & {\large \itshape dr hab. inż. Piotr Faliszewski}\\[2.0cm]
+\end{tabular}
+\end{flushleft}
+
+\begin{center}
+Kraków, 2015
+\end{center}
+
+\clearpage
+
+\sloppy
+Oświadczam, świadomy odpowiedzialności karnej za poswiadczenie nieprawdy,
+że~niniejszą pracę dyplomową wykonałem osobiście i samodzielnie i nie korzystałem
+ze~źródeł innych niż wymienione w pracy.
+
+
 \end{titlepage}
 
 %\maketitle
